--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>complete responsive coffee shop website design</title>
+    <title>coffee shop website design</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -416,7 +416,7 @@
         <a href="#">blogs</a>
     </div>
 
-    <div class="credit">created by <span>mr. web designer</span> | all rights reserved</div>
+    <div class="credit">created by <span>Mattia Noris</span> | all rights reserved</div>
 
 </section>
 
